fixed cv styling on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -88,8 +88,9 @@
     }
 
     .gridbox-info {
-        @apply  m-1 col-span-4 text-center text-sm font-normal bg-lightPurple rounded-md shadow-darkPrimary/50 shadow-sm
-        lg:col-span-2 lg:text-xl lg:p-4 lg:py-2.5 max-md:font-light
+        @apply  m-1 col-span-4 text-center text-base font-light bg-lightPurple rounded-md shadow-darkPrimary/50 shadow-sm
+        lg:col-span-2 lg:text-xl lg:p-4 lg:py-2.5
+        max-md:text-nowrap max-md:min-w-fit max-md:px-3
         dark:shadow-sm dark:shadow-lightPurple dark:bg-darkPrimary dark:bg-opacity-60;
     }
 
